@@ -1,6 +1,5 @@
 package org.openapitools.api;
 
-import org.openapitools.model.*;
 import org.openapitools.api.PetApiService;
 import org.openapitools.api.factories.PetApiServiceFactory;
 
@@ -33,7 +32,7 @@ import javax.validation.Valid;
 
 
 @io.swagger.annotations.Api(description = "the Pet API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", comments = "Generator version: 7.8.0-SNAPSHOT")
 public class PetApi  {
    private final PetApiService delegate;
 
@@ -44,11 +43,11 @@ public class PetApi  {
          String implClass = servletContext.getInitParameter("PetApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (PetApiService) Class.forName(implClass).newInstance();
+               delegate = (PetApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
-         } 
+         }
       }
 
       if (delegate == null) {
@@ -58,7 +57,7 @@ public class PetApi  {
       this.delegate = delegate;
    }
 
-    @POST
+    @javax.ws.rs.POST
     @Path("/pet")
     @Consumes({ "application/json", "application/xml" })
     
@@ -76,7 +75,7 @@ public class PetApi  {
     throws NotFoundException {
         return delegate.addPet(body, securityContext);
     }
-    @DELETE
+    @javax.ws.rs.DELETE
     @Path("/pet/{petId}")
     
     
@@ -94,7 +93,7 @@ public class PetApi  {
     throws NotFoundException {
         return delegate.deletePet(petId, apiKey, securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/pet/findByStatus")
     
     @Produces({ "application/xml", "application/json" })
@@ -108,11 +107,11 @@ public class PetApi  {
         @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Pet.class, responseContainer = "List"),
         @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid status value", response = Void.class)
     })
-    public Response findPetsByStatus(@ApiParam(value = "Status values that need to be considered for filter", required = true) @QueryParam("status") @NotNull @Valid  List<String> status,@Context SecurityContext securityContext)
+    public Response findPetsByStatus(@ApiParam(value = "Status values that need to be considered for filter", required = true) @QueryParam("status") @NotNull  List<String> status,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.findPetsByStatus(status, securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/pet/findByTags")
     
     @Produces({ "application/xml", "application/json" })
@@ -126,11 +125,11 @@ public class PetApi  {
         @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Pet.class, responseContainer = "Set"),
         @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid tag value", response = Void.class)
     })
-    public Response findPetsByTags(@ApiParam(value = "Tags to filter by", required = true) @QueryParam("tags") @NotNull @Valid  Set<String> tags,@Context SecurityContext securityContext)
+    public Response findPetsByTags(@ApiParam(value = "Tags to filter by", required = true) @QueryParam("tags") @NotNull  Set<String> tags,@Context SecurityContext securityContext)
     throws NotFoundException {
         return delegate.findPetsByTags(tags, securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/pet/{petId}")
     
     @Produces({ "application/xml", "application/json" })
@@ -146,7 +145,7 @@ public class PetApi  {
     throws NotFoundException {
         return delegate.getPetById(petId, securityContext);
     }
-    @PUT
+    @javax.ws.rs.PUT
     @Path("/pet")
     @Consumes({ "application/json", "application/xml" })
     
@@ -166,7 +165,7 @@ public class PetApi  {
     throws NotFoundException {
         return delegate.updatePet(body, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/pet/{petId}")
     @Consumes({ "application/x-www-form-urlencoded" })
     
@@ -183,7 +182,7 @@ public class PetApi  {
     throws NotFoundException {
         return delegate.updatePetWithForm(petId, name, status, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/pet/{petId}/uploadImage")
     @Consumes({ "multipart/form-data" })
     @Produces({ "application/json" })
@@ -197,11 +196,11 @@ public class PetApi  {
         @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = ModelApiResponse.class)
     })
     public Response uploadFile(@ApiParam(value = "ID of pet to update", required = true) @PathParam("petId") @NotNull  Long petId,@ApiParam(value = "Additional data to pass to server")@FormDataParam("additionalMetadata")  String additionalMetadata,
- @FormDataParam("file") FormDataBodyPart fileBodypart ,@Context SecurityContext securityContext)
+ @FormDataParam("file") FormDataBodyPart _fileBodypart ,@Context SecurityContext securityContext)
     throws NotFoundException {
-        return delegate.uploadFile(petId, additionalMetadata, fileBodypart, securityContext);
+        return delegate.uploadFile(petId, additionalMetadata, _fileBodypart, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/fake/{petId}/uploadImageWithRequiredFile")
     @Consumes({ "multipart/form-data" })
     @Produces({ "application/json" })
