@@ -1,6 +1,5 @@
 package org.openapitools.api;
 
-import org.openapitools.model.*;
 import org.openapitools.api.StoreApiService;
 import org.openapitools.api.factories.StoreApiServiceFactory;
 
@@ -31,7 +30,7 @@ import javax.validation.Valid;
 
 
 @io.swagger.annotations.Api(description = "the Store API")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJerseyServerCodegen", comments = "Generator version: 7.8.0-SNAPSHOT")
 public class StoreApi  {
    private final StoreApiService delegate;
 
@@ -42,11 +41,11 @@ public class StoreApi  {
          String implClass = servletContext.getInitParameter("StoreApi.implementation");
          if (implClass != null && !"".equals(implClass.trim())) {
             try {
-               delegate = (StoreApiService) Class.forName(implClass).newInstance();
+               delegate = (StoreApiService) Class.forName(implClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                throw new RuntimeException(e);
             }
-         } 
+         }
       }
 
       if (delegate == null) {
@@ -56,7 +55,7 @@ public class StoreApi  {
       this.delegate = delegate;
    }
 
-    @DELETE
+    @javax.ws.rs.DELETE
     @Path("/order/{order_id}")
     
     
@@ -69,7 +68,7 @@ public class StoreApi  {
     throws NotFoundException {
         return delegate.deleteOrder(orderId, securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/inventory")
     
     @Produces({ "application/json" })
@@ -83,11 +82,11 @@ public class StoreApi  {
     throws NotFoundException {
         return delegate.getInventory(securityContext);
     }
-    @GET
+    @javax.ws.rs.GET
     @Path("/order/{order_id}")
     
     @Produces({ "application/xml", "application/json" })
-    @io.swagger.annotations.ApiOperation(value = "Find purchase order by ID", notes = "For valid response try integer IDs with value <= 5 or > 10. Other values will generated exceptions", response = Order.class, tags={ "store", })
+    @io.swagger.annotations.ApiOperation(value = "Find purchase order by ID", notes = "For valid response try integer IDs with value <= 5 or > 10. Other values will generate exceptions", response = Order.class, tags={ "store", })
     @io.swagger.annotations.ApiResponses(value = {
         @io.swagger.annotations.ApiResponse(code = 200, message = "successful operation", response = Order.class),
         @io.swagger.annotations.ApiResponse(code = 400, message = "Invalid ID supplied", response = Void.class),
@@ -97,7 +96,7 @@ public class StoreApi  {
     throws NotFoundException {
         return delegate.getOrderById(orderId, securityContext);
     }
-    @POST
+    @javax.ws.rs.POST
     @Path("/order")
     
     @Produces({ "application/xml", "application/json" })
